# deep-oc-client

./: .coveragerc  CONTRIBUTING.md  README.md  requirements.txt  setup.cfg  tox.ini
deep_oc_client/: __init__.py  shell.py  version.py
deep_oc_client/client/: client.py  modules.py
deep_oc_client/cmd/: modules.py
deep_oc_client/tests/: test_deep_oc_client.py
doc/source/: conf.py  index.rst  installation.rst
