[metadata]
name = deep-oc-client
summary = DEEP OC Command Line Interface (DEEP OC CLI)
description-file =
    README.md
description-content-type = text/markdown; charset=UTF-8

author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es
home-page = https://marketplace.deep-hybrid-datacloud.eu/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Information Analysis

[files]
packages =
    deep_oc_client

[entry_points]
console_scripts = 
    deep-oc = deep_oc_client.shell:main

deep-oc.cli=
    module_list = deep_oc_client.cmd.modules:ModuleList
    module_ls = deep_oc_client.cmd.modules:ModuleList

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
